# super-rapidgator

./: .gitignore  Dockerfile  main.py  pyproject.toml  session_cookies.json  ubuntu-server-setup.md
.cursor/rules/: personal.mdc
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  tasks.json
src/super_rapidgator/api/: auth.py  download.py  extract.py  ui.py
src/super_rapidgator/core/: config.py  redis_client.py
src/super_rapidgator/models/: download.py
src/super_rapidgator/services/: rapidgator_client.py
src/super_rapidgator/workers/: __init__.py  celery_app.py  tasks.py
static/css/: output.css
templates/: api_docs.html  auth.html  base.html  dashboard.html  download.html  extract.html
