[project]
name = "super-rapidgator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "celery[redis]>=5.3.0",
    "fastapi[standard]>=0.116.0",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "patool>=4.0.1",
    "playwright>=1.52.0",
    "playwright-stealth>=2.0.0",
    "py7zr>=1.0.0",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "rarfile>=4.2",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.35.0",
]
